# CITS5206-Capstone

./: .gitignore  README.md  docker-compose.yml  pgadmin.sh  requirements.txt
backend/: .env.example  Capstone.pem  README.md  README_classification.md  classification_api_docs.md  config.py  demo.py  example_usage.py  main.py  print_dsn.py  pyproject.toml  requirements.txt  run.py  test_classification.py  test_classification_simple.py  test_db.py
backend/app/: __init__.py  extensions.py  main.py
backend/app/adapters/: openai_client.py  redis_client.py
backend/app/api/: __init__.py  classification.py  health.py  llm_test.py  media.py  mock.json  query.py  schema.py
backend/app/core/: config.py
backend/app/models/: __init__.py  dto.py  three_level_models.py  tri_level_dto.py  tri_level_model.py
backend/app/prompt_templates/: init_tasks_promopts.py  instruction.md  prompts.py
backend/app/script/: batch_coverage_test.py  import_table_name.py  import_three_level_mapping.py  mapping.json  mappingV2.json  run_init_tasks_llm.py
backend/app/services/: classification_service.py  geo_reasoning_service.py  llm_service.py  orchestrator.py  routing_service.py  sql_service.py  three_level_service.py
backend/app/utils/: data_gen.py  geojson.py  (+1 more)
backend/data/: generated_queries_capstone.xlsx  ne_10m_admin_0_countries_chn.json  ne_10m_geography_marine_polys.json  ne_10m_geography_marine_polys.sql  ne_10m_geography_region_polys.json  ne_10m_lakes.json  ne_10m_lakes_historic.json  ne_10m_lakes_historic.sql  ne_10m_lakes_historic_results.json
backend/docs/: sql_service.md
backend/examples/: sql_service_demo.py
backend/tests/: test_classification_service.py  test_routing_service.py  test_sql_service.py  test_three_level_service.py
(+76 files in other folders)
